--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,21 @@
   <groupId>br.com.hoptech</groupId>
   <artifactId>java-toolbox</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+	 <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
+  
+  <dependencies>
+  
+	 <dependency>
+	   <groupId>org.jamel.dbf</groupId>
+	   <artifactId>dbf-reader</artifactId>
+	   <version>0.0.3</version>
+	</dependency>
+
+  </dependencies>
+  
 </project>
