--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
 	 <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>1.12</java.version>
+
+		 <maven.compiler.source>1.12</maven.compiler.source>
+		 <maven.compiler.target>1.12</maven.compiler.target>
 	</properties>
   
   <dependencies>
@@ -23,7 +26,13 @@
 	    <artifactId>poi</artifactId>
 	    <version>3.17</version>
 	</dependency>
-	
+
+<!--	<dependency>-->
+<!--	  <groupId>org.springframework.boot</groupId>-->
+<!--	  <artifactId>spring-boot-starter-test</artifactId>-->
+<!--	  <scope>test</scope>-->
+<!--	</dependency>-->
+
 	<!-- https://mvnrepository.com/artifact/org.json/json -->
 	<dependency>
 	    <groupId>org.json</groupId>
