--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
 			<version>3.17</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.sf.jsefa/jsefa -->
+		<dependency>
+			<groupId>net.sf.jsefa</groupId>
+			<artifactId>jsefa</artifactId>
+			<version>1.1.1.RELEASE</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
